examples/failing/UnknownType.purs
-- @shouldFailWith UnknownType
module Main where

import Prelude

test :: Number -> Something
test = {}
